# mitp14lab

./: .gitignore  PROMPT_LOG.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
analyzer/: Dockerfile
collector/: Dockerfile  go.mod  go.sum
collector/cmd/collector/: main.go  main_test.go
collector/internal/social/: aggregator.go  aggregator_test.go  arrow.go  simulator.go  types.go  writer.go
dashboard/: Dockerfile  app.py
docs/: ARROW.md  BENCHMARK.md  DISTRIBUTED_COORDINATION.md  KUBERNETES.md  STREAMING.md
k8s/: analyzer-deployment.yaml  collector-deployment.yaml  dashboard-deployment.yaml  deployment.yaml  etcd.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  nats.yaml  service.yaml
pipeline/: __init__.py  analyzer.py  arrow_client.py  benchmark.py  python_collector.py  rust_validator.py  stream_consumer.py
rust-validator/: Cargo.toml
rust-validator/src/: lib.rs  main.rs
tests/: test_analyzer.py  test_arrow_client.py  test_benchmark.py  test_python_collector.py  test_rust_validator.py  test_stream_consumer.py
