[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lab14-social-pipeline"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "polars>=0.20.31,<2.0",
  "duckdb>=1.0.0,<2.0",
  "plotly>=5.22.0,<7.0",
  "pyarrow>=16.0.0,<23.0",
  "requests>=2.32.0,<3.0",
  "streamlit>=1.36.0,<2.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0,<9.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
